    Applied a few small fixes from the current 0.23.2
    Debian package:

        * Better Rails query creation
        * Correct resource deletion from Rails
        * Empty configuration values are supported

    Parsing errors are correctly logged and correctly fails
    when there are syntax failures in unrecoverable
    circumstances, including --parseonly.

0.23.2
    Fixed the problem in cron jobs where environment settings
    tended to multiple. (#749)

    Collection of resources now correctly only collects exported
    resources again.  This was broken in 0.23.0. (#731)

    'gen_config' now generates a configuration with
    all parameters under a heading that matches the
    process name, rather than keeping section headings.

    Refactored how the parser and interpreter relate,
    so parsing is now effectively an atomic process (thus
    fixing #314 and #729).  This makes the interpreter less
    prone to error and less prone to show the error to the
    clients.  Note that this means that if a configuration
    fails to parse, then the previous, parseable configuration
    will be used instead, so the client will not know that
    the configuration failed to parse.

    Added support for managing interfaces, thanks to work
    by Paul Rose.

    Fixed #652, thanks to a patch by emerose; --fqdn again
    works with puppetd.

    Added an extra check to the Mongrel support so that
    Apache can be used with optional cert checking, instead
    of mandatory, thus allowing Mongrel to function as the CA.
    This is thanks to work done by Marcin Owsiany.

0.23.1
    You can now specify relationships to classes, which work
    exactly like relationships to defined types:
        require => Class[myclass]
    This works with qualified classes, too.

    You can now do simple queries in a collection of
    exported resources.  You still cannot do multi-condition queries,
    though. (#703)

    puppetca now exits with a non-zero code if it cannot