@@ -348,6 +348,9 @@ module Puppet
             may need to use a FQDN for the server hostname when using a proxy."],
         :http_proxy_port => [3128,
             "The HTTP proxy port to use for outgoing connections"],
+         :http_enable_post_connection_check => [true,
+             "Boolean; wheter or not puppetd should validate the server
+             SSL certificate against the request hostname."],
         :server => ["puppet",
             "The server to which server puppetd should connect"],
         :ignoreschedules => [false,
